--- a/asserts/css/styles.css
+++ b/asserts/css/styles.css
@@ -47,13 +47,25 @@
     --footer-background-color: #000;
 }
 
+.dark-theme button,
+.dark-theme h1,
+.dark-theme h2,
+.dark-theme h3 {
+  letter-spacing: 5px;
+  font-weight: normal;
+}
+
+.dark-theme .invert-element {
+  transform: rotateZ(180deg) scaleX(-1);
+}
+
 /***  GENERIC STYLES ***/
 
 * {
     margin: 0;
     box-sizing: border-box;
     transition: 1s;
-  }
+}
   
 body {
     background: var(--page-background);
@@ -371,4 +383,43 @@ section {
 #section-form .form-container form button:hover {
     background-color: var(--primary-color-contrast);
     color: var(--field-background-color);
+}
+
+/*** FOOTER STYLES ***/
+
+footer {
+  padding: 60px 0;
+  background-color: var(--footer-background-color);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+footer p {
+  max-width: 700px;
+  margin-bottom: 24px;
+}
+
+footer::before,
+footer::after {
+  content: "";
+  width: 300px;
+  height: 200px;
+  background: url("../images/footer/tape.svg") no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: -30px;
+}
+
+footer::before {
+  left: -50px;
+  transform: rotateZ(-10deg);
+}
+
+footer::after {
+  right: -50px;
+  transform: rotateZ(10deg);
 }
